; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_base.c_base_node_try_alloc.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_base.c_base_node_try_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@base_nodes = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @base_node_try_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @base_node_try_alloc() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = load i32*, i32** @base_nodes, align 8
  %4 = icmp eq i32* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  store i32* null, i32** %1, align 8
  br label %14

6:                                                ; preds = %0
  %7 = load i32*, i32** @base_nodes, align 8
  store i32* %7, i32** %2, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = bitcast i32* %8 to i32**
  %10 = load i32*, i32** %9, align 8
  store i32* %10, i32** @base_nodes, align 8
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @JEMALLOC_VALGRIND_MAKE_MEM_UNDEFINED(i32* %11, i32 4)
  %13 = load i32*, i32** %2, align 8
  store i32* %13, i32** %1, align 8
  br label %14

14:                                               ; preds = %6, %5
  %15 = load i32*, i32** %1, align 8
  ret i32* %15
}

declare dso_local i32 @JEMALLOC_VALGRIND_MAKE_MEM_UNDEFINED(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
